[package]
name = "socket_pipe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
either = { version = "1.15.0", features = ["use_std", "serde"] }
env_logger = "0.11.8"
log = { version = "0.4.29", features = ["std", "serde"] }
quicli = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
structopt = "0.3.26"
structstruck = "0.5.1"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "net", "io-std", "sync", "bytes", "full"] }
tokio-scoped = "0.2.0"
tracing = "0.1.44"

[profile.release]
opt-level = 3
panic = "abort"
lto = "fat"
build-units = 1
debug="strip"
